# fabricd

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  fabricd.conformance.example.json  fabricd.example.json
.github/workflows/: ci.yml
crates/fabric-backends/: Cargo.toml
crates/fabric-backends/src/: amq.rs  auth.rs  backendset.rs  db.rs  kv.rs  lib.rs  mail.rs  mongo.rs  resources.rs  sa_token.rs
crates/fabricd/: Cargo.toml
crates/fabricd/src/: auth.rs  main.rs
docs/: driver-conformance.md  go-rewrite-wire-contract.md
openspec/: config.yaml
openspec/changes/adopt-byo-capabilities-contract/: proposal.md  tasks.md
scripts/: smoke_4b.sh  smoke_5.sh  smoke_quic.sh  smoke_satoken.sh
supply-chain/: config.toml
